--- a/css/style.css
+++ b/css/style.css
@@ -2415,6 +2415,118 @@ TUTOR PROFILE PAGE
     .get_in_touch .container .wrapper .get_in_touch_options .row > div img {
       margin-right: 10px; }
 
+.review .container .wrapper .review-box {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  padding-bottom: 30px;
+  border-bottom: 1px solid rgba(90, 109, 115, 0.5); }
+  .review .container .wrapper .review-box img {
+    width: 20px;
+    height: 20px; }
+.review .container .wrapper .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(90, 109, 115, 0.5); }
+  .review .container .wrapper .row .tutor-left {
+    width: 10%;
+    min-width: 200px;
+    max-width: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row; }
+    .review .container .wrapper .row .tutor-left img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%; }
+    .review .container .wrapper .row .tutor-left .review_count {
+      font-size: 0.9rem;
+      color: rgba(90, 109, 115, 0.7); }
+  .review .container .wrapper .row .review_msg {
+    width: 50%;
+    min-width: 320px;
+    padding-left: 30px;
+    color: #b497cf; }
+.review .container .wrapper button {
+  margin-top: 40px; }
+
+.details .container .wrapper form {
+  border: 1px solid black;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column; }
+  .details .container .wrapper form .row {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 8px 0;
+    width: 60%; }
+    .details .container .wrapper form .row label {
+      width: 40%;
+      min-width: 230px; }
+    .details .container .wrapper form .row button {
+      background: #fff;
+      border: 1px solid rgba(90, 109, 115, 0.5); }
+      .details .container .wrapper form .row button.active_button {
+        background: #fedc40;
+        border: none; }
+    .details .container .wrapper form .row button,
+    .details .container .wrapper form .row input,
+    .details .container .wrapper form .row .select-box {
+      width: 28%;
+      min-width: 170px; }
+    .details .container .wrapper form .row .lesson {
+      margin-right: 4%; }
+    .details .container .wrapper form .row input,
+    .details .container .wrapper form .row select {
+      padding: 5px 20px;
+      border: 1px solid rgba(90, 109, 115, 0.5);
+      border-radius: 3px; }
+    .details .container .wrapper form .row input {
+      font-family: "Roboto", sans-serif;
+      font-size: 0.95rem; }
+      .details .container .wrapper form .row input:focus {
+        outline: none;
+        border: 1px solid #b497cf; }
+    .details .container .wrapper form .row .select-box {
+      position: relative;
+      margin-right: 4%; }
+      .details .container .wrapper form .row .select-box select {
+        width: 100%;
+        color: #5a6d73;
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none; }
+        .details .container .wrapper form .row .select-box select option {
+          color: #5a6d73; }
+      .details .container .wrapper form .row .select-box span {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        border-bottom: none;
+        border-top: 8px solid rgba(90, 109, 115, 0.5);
+        border-right: 8px solid transparent;
+        border-left: 8px solid transparent;
+        pointer-events: none; }
+    .details .container .wrapper form .row:first-child {
+      margin-bottom: 30px; }
+
+.faq .container .wrapper article .book_a_lesson {
+  line-height: 3; }
+
 /*******************
     RESPONSIVE
 ********************/
@@ -3919,7 +4031,39 @@ TUTOR PROFILE PAGE
       display: inline-block;
       font-size: 0.85rem; }
     .booking .container .wrapper .calendar_view .time_table > div {
-      font-size: 0.85rem; } }
+      font-size: 0.85rem; }
+
+  .review .container .wrapper .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 20px 0;
+    border-bottom: 1px solid rgba(90, 109, 115, 0.5); }
+    .review .container .wrapper .row .tutor-left {
+      width: 10%;
+      min-width: 200px;
+      max-width: 350px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      flex-direction: row; }
+      .review .container .wrapper .row .tutor-left img {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%; }
+      .review .container .wrapper .row .tutor-left .review_count {
+        font-size: 0.9rem;
+        color: rgba(90, 109, 115, 0.7); }
+    .review .container .wrapper .row .review_msg {
+      width: 50%;
+      min-width: 320px;
+      text-align: center;
+      padding-left: 0px;
+      margin: 10px 0;
+      color: #b497cf; } }
 @media (max-width: 590px) {
   header {
     padding: 50px 10px;
