--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,6 +11,8 @@ $black: black;
 $white: #fff;
 $green: #33bf8a;
 $blue: #89bfe8;
+$star_gray: #e5e5e5;
+$star_yellow: #efa650;
 $container-padding: 50px 0 80px 0;
 $sectionPadding: 100px;
 $transition: 0.4s ease-in-out;
