--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -469,6 +469,12 @@
 			}
 		}
 	}
+	.tutor_details_header {
+		margin-bottom: 300px;
+	}
+	.tutor_lesson_header {
+		margin-bottom: 140px;
+	}
 }
 
 @media (max-width: $breakPoint_4) {
@@ -768,7 +774,7 @@
 
 	.tutor_profile_header {
 		// height: 50vh;
-		margin-bottom: 400px;
+		margin-bottom: 200px;
 		.container {
 			.tutor-profile-view {
 				.tutor-profile-card {
@@ -846,6 +852,12 @@
 			}
 		}
 	}
+	.tutor_details_header {
+		margin-bottom: 300px;
+	}
+	.tutor_lesson_header {
+		margin-bottom: 120px;
+	}
 
 	.payment_method {
 		.container {
@@ -870,7 +882,18 @@
 					width: 25%;
 					min-width: 180px;
 				}
-				.share_infos {
+			}
+		}
+	}
+	.details {
+		.container {
+			.wrapper {
+				form {
+					.row {
+						@include flex(center, flex-start, wrap, row);
+
+						width: 100%;
+					}
 				}
 			}
 		}
@@ -1067,7 +1090,7 @@
 
 	.tutor_profile_header {
 		padding-bottom: 50px;
-		margin-bottom: 400px;
+		margin-bottom: 250px;
 		background-image: url(/img/search_opt/search_opt_bg.png);
 		background-position: center;
 		background-size: cover;
@@ -1232,6 +1255,9 @@
 		}
 	}
 
+	.tutor_details_header {
+		margin-bottom: 330px;
+	}
 	.my_messages {
 		.container {
 			.wrapper {
@@ -1364,6 +1390,9 @@
 				}
 			}
 		}
+	}
+	.tutor_lesson_header {
+		margin-bottom: 200px;
 	}
 }
 
@@ -1532,6 +1561,7 @@
  TUTOR DETAILS
 ******************/
 	.tutor_details_header {
+		// margin-bottom: 250px;
 		.tutor-profile {
 			.container {
 				.tutor-profile-view {
@@ -2008,6 +2038,114 @@
 			}
 		}
 	}
+	.details {
+		.container {
+			.wrapper {
+				form {
+					// border: 1px solid black;
+					@include flex(flex-start, center, wrap, column);
+					.row {
+						@include flex(center, flex-start, wrap, row);
+						// border: 1px solid black;
+						width: 100%;
+						min-width: unset;
+
+						label {
+							width: 100%;
+							min-width: 230px;
+							margin-bottom: 20px;
+							// border: 1px solid black;
+						}
+						button {
+							background: $white;
+							border: 1px solid rgba($line_color, 0.5);
+							padding: 10px 0;
+							&.active_button {
+								background: $btn-primary;
+								border: none;
+							}
+						}
+						button,
+						input,
+						.select-box {
+							width: 49%;
+							min-width: unset;
+						}
+						.lesson {
+							margin-right: 2%;
+							font-size: 0.85rem;
+						}
+						input,
+						select {
+							padding: 5px 10px;
+							border: 1px solid rgba($line_color, 0.5);
+							border-radius: 3px;
+						}
+						input {
+							font-family: $font_family;
+							font-size: 0.95rem;
+							&:focus {
+								outline: none;
+								border: 1px solid $accents;
+							}
+						}
+						.select-box {
+							position: relative;
+							margin-right: 2%;
+							select {
+								width: 100%;
+								color: $line_color;
+								appearance: none;
+								-moz-appearance: none;
+								-webkit-appearance: none;
+								option {
+									color: $line_color;
+								}
+							}
+							span {
+								position: absolute;
+								right: 10px;
+								top: 50%;
+								transform: translateY(-50%);
+								border-bottom: none;
+								border-top: 8px solid rgba($line_color, 0.5);
+								border-right: 8px solid transparent;
+								border-left: 8px solid transparent;
+								pointer-events: none;
+							}
+						}
+						textarea {
+							width: 100%;
+							border: 1px solid rgba($line_color, 0.5);
+							padding: 10px;
+							font-family: $font_family;
+							color: $line_color;
+							::placeholder {
+								font-family: $font_family;
+							}
+						}
+						&:first-child {
+							margin-bottom: 30px;
+						}
+						.lead {
+							font-style: italic;
+							margin: 30px 0;
+						}
+						&:nth-child(9) {
+							align-items: flex-start;
+						}
+					}
+					> button {
+						width: 170px;
+						margin-top: 30px;
+					}
+				}
+			}
+		}
+	}
+	.tutor_lesson_header {
+		margin-bottom: 250px !important;
+	}
 }
 
 @media (max-width: $breakPoint_6_b) {
@@ -2275,9 +2413,14 @@
 	}
 
 	.tutor_profile_header {
+		margin-bottom: 330px;
 		.container {
 			bottom: -70%;
 		}
+	}
+
+	.tutor_lesson_header {
+		margin-bottom: 250px !important;
 	}
 	.pricing {
 		.container {
