--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,71 @@ h2 {
         .custom-select .select-box .options-container .option:hover {
           background-color: #b497cf;
           color: #fff; }
+      .custom-select .select-box .options-container .price:hover {
+        background: #fff; }
+      .custom-select .select-box .options-container .price .middle {
+        position: relative;
+        width: 100%;
+        max-width: 500px;
+        height: 100px; }
+        .custom-select .select-box .options-container .price .middle .price-range {
+          margin-bottom: 15px; }
+        .custom-select .select-box .options-container .price .middle .multirange-slider input[type="range"] {
+          position: absolute;
+          z-index: 2;
+          width: 100%;
+          height: 10px;
+          opacity: 0;
+          -webkit-appearance: none;
+          appearance: none;
+          pointer-events: none; }
+          .custom-select .select-box .options-container .price .middle .multirange-slider input[type="range"]::-moz-range-thumb {
+            -webkit-appearance: none;
+            pointer-events: none;
+            appearance: none;
+            width: 30px;
+            height: 30px;
+            border: 0 none;
+            border-radius: 0;
+            pointer-events: all; }
+        .custom-select .select-box .options-container .price .middle .multirange-slider .slider {
+          position: relative;
+          z-index: 1;
+          height: 10px;
+          margin: 0 15px;
+          /* border: 1px solid red; */ }
+          .custom-select .select-box .options-container .price .middle .multirange-slider .slider .track {
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            border-radius: 5px;
+            background-color: #eeeeee; }
+          .custom-select .select-box .options-container .price .middle .multirange-slider .slider .range {
+            position: absolute;
+            z-index: 2;
+            left: 25%;
+            right: 25%;
+            top: 0;
+            bottom: 0;
+            border-radius: 5px;
+            background-color: #b497cf; }
+          .custom-select .select-box .options-container .price .middle .multirange-slider .slider .thumb {
+            position: absolute;
+            z-index: 3;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background-color: #b497cf;
+            opacity: 1; }
+            .custom-select .select-box .options-container .price .middle .multirange-slider .slider .thumb.left {
+              left: 25%;
+              transform: translateX(-15px) translateY(-10px); }
+            .custom-select .select-box .options-container .price .middle .multirange-slider .slider .thumb.right {
+              right: 25%;
+              transform: translate(15px) translateY(-10px); }
       .custom-select .select-box .options-container.active {
         max-height: 240px;
         opacity: 1;
