--- a/scss/custom_select.scss
+++ b/scss/custom_select.scss
@@ -40,6 +40,87 @@
 					color: $white;
 				}
 			}
+			.price {
+				&:hover {
+					background: $white;
+				}
+				.middle {
+					position: relative;
+					width: 100%;
+					max-width: 500px;
+					height: 100px;
+					.price-range {
+						margin-bottom: 15px;
+					}
+					.multirange-slider {
+						input[type="range"] {
+							position: absolute;
+							z-index: 2;
+							width: 100%;
+							height: 10px;
+							opacity: 0;
+							-webkit-appearance: none;
+							appearance: none;
+							pointer-events: none;
+							&::-moz-range-thumb {
+								-webkit-appearance: none;
+								pointer-events: none;
+								appearance: none;
+								width: 30px;
+								height: 30px;
+								border: 0 none;
+								border-radius: 0;
+								pointer-events: all;
+							}
+						}
+						.slider {
+							position: relative;
+							z-index: 1;
+							height: 10px;
+							margin: 0 15px;
+							/* border: 1px solid red; */
+							.track {
+								position: absolute;
+								z-index: 1;
+								left: 0;
+								right: 0;
+								top: 0;
+								bottom: 0;
+								border-radius: 5px;
+								background-color: $backgorund-primary;
+							}
+							.range {
+								position: absolute;
+								z-index: 2;
+								left: 25%;
+								right: 25%;
+								top: 0;
+								bottom: 0;
+								border-radius: 5px;
+								background-color: $accents;
+							}
+							.thumb {
+								position: absolute;
+								z-index: 3;
+								width: 30px;
+								height: 30px;
+								border-radius: 50%;
+								background-color: $accents;
+								opacity: 1;
+								&.left {
+									left: 25%;
+									transform: translateX(-15px) translateY(-10px);
+								}
+
+								&.right {
+									right: 25%;
+									transform: translate(15px) translateY(-10px);
+								}
+							}
+						}
+					}
+				}
+			}
 			&.active {
 				max-height: 240px;
 				opacity: 1;
