--- a/scss/custom_select.scss
+++ b/scss/custom_select.scss
@@ -55,14 +55,25 @@
 					.multirange-slider {
 						input[type="range"] {
 							position: absolute;
-							z-index: 2;
+							z-index: 5;
 							width: 100%;
 							height: 10px;
 							opacity: 0;
 							-webkit-appearance: none;
 							appearance: none;
 							pointer-events: none;
+
 							&::-moz-range-thumb {
+								-webkit-appearance: none;
+								pointer-events: none;
+								appearance: none;
+								width: 30px;
+								height: 30px;
+								border: 0 none;
+								border-radius: 0;
+								pointer-events: all;
+							}
+							&::-webkit-slider-thumb {
 								-webkit-appearance: none;
 								pointer-events: none;
 								appearance: none;
