--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1394,6 +1394,122 @@
 	.tutor_lesson_header {
 		margin-bottom: 200px;
 	}
+
+	// REVIEW SECTION
+	.review_section {
+		.leave_review {
+			.container {
+				.review__wrapper {
+					.post {
+						display: none;
+
+						.text {
+						}
+						.your_review {
+							padding: 10px 20px;
+							border: 1px solid rgba($line_color, 0.7);
+							margin-bottom: 1rem;
+							color: $footer;
+							display: flex;
+							flex-wrap: wrap;
+							align-items: center;
+							justify-content: center;
+							.review_img_out {
+								width: 80px;
+								height: 80px;
+								margin-right: 10%;
+								img {
+									width: 100%;
+									height: 100%;
+									object-fit: contain;
+									object-position: center;
+									display: block;
+									border-radius: 50%;
+								}
+							}
+							.review_name_out {
+								margin-right: 0%;
+							}
+							.review_content_out {
+								color: $accents;
+								margin-top: 10px;
+								flex: 0 0 100%;
+								min-width: 200px;
+							}
+						}
+						.edit {
+							position: absolute;
+							top: 1em;
+							right: 0;
+							cursor: pointer;
+							color: rgba($footer, 0.7);
+							&:hover {
+								text-decoration: underline;
+								color: rgba($footer, 1);
+							}
+						}
+						.btn {
+							@include btn-primary($footer, 1rem);
+							padding: 0.9em 1.2em;
+							cursor: pointer;
+						}
+					}
+					.star-widget {
+						padding: 40px 0;
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+						text-align: center;
+						h4 {
+							font-size: 1.5rem;
+							font-weight: 300;
+							color: $footer;
+							margin-bottom: 20px;
+						}
+
+						.labels {
+							display: flex;
+							flex-direction: row-reverse;
+
+							input {
+								display: none;
+								&:not(checked) ~ label:hover svg path,
+								&:not(checked) ~ label:hover ~ label svg path {
+									fill: $star_yellow;
+								}
+								&:checked ~ label svg path {
+									fill: $star_yellow;
+								}
+								&#rate-5:checked ~ label svg path {
+									fill: $star_yellow;
+								}
+							}
+
+							label {
+								height: 20px;
+								line-height: 20px;
+								// border: 1px solid red;
+								position: relative;
+								margin-right: 25px;
+
+								svg {
+									height: 20px;
+									// border: 1px solid green;
+									position: absolute;
+									left: 0;
+									top: 0;
+									path {
+										fill: rgba($footer, 0.7);
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_6) {
