--- a/css/style.css
+++ b/css/style.css
@@ -777,6 +777,7 @@ header {
       .testimonials .container .owl-carousel .item .item_right {
         width: 100%;
         height: 100%;
+        padding-left: 80px;
         position: relative;
         align-self: center;
         height: auto; }
