--- a/scss/style.scss
+++ b/scss/style.scss
@@ -602,7 +602,7 @@ header {
 					// border: 1px solid black;
 					width: 100%;
 					height: 100%;
-					// padding-left: 80px;
+					padding-left: 80px;
 					position: relative;
 
 					align-self: center;
