--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,7 +100,7 @@ nav {
 	transition-delay: 0.4s;
 
 	.container {
-		@include flex(center, center, nowrap, row);
+		@include flex(center, space-between, nowrap, row);
 
 		.logo {
 			width: 86px;
@@ -129,6 +129,7 @@ nav {
 			}
 			.langs {
 				li {
+					font-size: 0.9rem;
 					&::after {
 						content: "/";
 						margin: 0 5px;
@@ -138,6 +139,20 @@ nav {
 							display: none;
 						}
 					}
+				}
+			}
+			.login {
+				margin-left: 30px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				img {
+					width: 20px;
+					height: 20px;
+				}
+				p {
+					margin-left: 10px;
+					font-size: 0.9rem;
 				}
 			}
 		}
